--- a/css/index.css
+++ b/css/index.css
@@ -139,3 +139,23 @@ button[disabled=disabled], button:disabled {
 	font-size: 15px;
 	font-weight: bold;
 }
+
+#error {
+	color: red;
+	font-size: 20px;
+}
+
+.fadeOut {
+	opacity: 0;
+	transition: 1s;
+}
+
+#filtrar-tabela {
+    width: 200px;
+    height: 35px;
+    margin-bottom: 10px;
+}
+
+.esconde {
+	display: none;
+}
