--- a/css/index.css
+++ b/css/index.css
@@ -32,10 +32,17 @@ header .container:before{
 	vertical-align:	middle;
 }
 
-.container{
-	width: 60%;
-	height: 100%;
-	margin: 0 auto;
+.container-tabela{
+	float: right;
+	height: 50%;
+	width:70%;
+	padding: 0 30px 0 0;
+}
+.container-adiciona{
+	float: left;
+	height: 50%;
+	width:30%;
+	padding: 0 15px 0 ;
 }
 
 section{
@@ -71,7 +78,6 @@ th{
 }
 
 label{
-	color: #555;
 	display: block;
 	margin-bottom: .2em;
 }
@@ -91,7 +97,7 @@ label{
 }
 
 .grupo{
-	width: 32%;
+	width: 70%;
 	display: inline-block;
 	padding: 10px 0px;
 }
@@ -105,13 +111,13 @@ button{
 	margin: 0;
 	margin-top: -3px;
 	color: #fff;
-	background-color:#0c8cd3;
-	border-color: #04324c;
-	width: 20%;
+	background-color:black;
+	border-color: black;
     display: block;
     clear: both;
     margin: 10px 0px;
-
+	text-align: center;
+	border-radius: 5px;
 }
 
 button:active{
@@ -134,8 +140,7 @@ button[disabled=disabled], button:disabled {
 }
 
 .pessoa-invalida {
-	background-color: #00ff00;
-	color: red;
+	color: rgb(148, 0, 0);
 	font-size: 15px;
 	font-weight: bold;
 }
@@ -158,4 +163,14 @@ button[disabled=disabled], button:disabled {
 
 .esconde {
 	display: none;
+}
+
+.topo-tabela {
+	background-color: black;
+	color: white;
+}
+
+.img {
+	width: 40%;
+	height: 40%;
 }
